exports[`test fails with no buttonText 1`] = `"received is not a function"`;

exports[`test fails with no props 1`] = `"received is not a function"`;

exports[`test renders correctly 1`] = `
<View
  accessibilityLabel={undefined}
  style={
    Object {
      "flex": -1,
      "flexDirection": "row-reverse",
    }
  }>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
      ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#8B5E3C",
            "borderColor": "#000000",
            "borderRadius": 10,
            "elevation": 5,
            "flex": -1,
            "flexDirection": "row",
            "justifyContent": "center",
            "margin": 15,
            "padding": 15,
            "shadowColor": "#333333",
            "shadowOffset": Object {
              "height": 1,
              "width": 2,
            },
            "shadowOpacity": 0.5,
            "shadowRadius": 0.95,
          },
          Object {
            "margin": 12,
          },
          null,
          null,
          null,
          Object {
            "height": 44,
          },
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "backgroundColor": "rgba(0, 0, 0, 0)",
              "color": "#ffffff",
            },
            Object {
              "fontSize": 12,
            },
          ]
        } />
    </View>
  </View>
</View>
`;

exports[`test renders correctly with button size 1`] = `
<View
  accessibilityLabel={undefined}
  style={
    Object {
      "flex": -1,
      "flexDirection": "row-reverse",
    }
  }>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
      ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#8B5E3C",
            "borderColor": "#000000",
            "borderRadius": 10,
            "elevation": 5,
            "flex": -1,
            "flexDirection": "row",
            "justifyContent": "center",
            "margin": 15,
            "padding": 15,
            "shadowColor": "#333333",
            "shadowOffset": Object {
              "height": 1,
              "width": 2,
            },
            "shadowOpacity": 0.5,
            "shadowRadius": 0.95,
          },
          Object {
            "margin": 12,
          },
          null,
          null,
          null,
          Object {
            "height": 50,
          },
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "backgroundColor": "rgba(0, 0, 0, 0)",
              "color": "#ffffff",
            },
            Object {
              "fontSize": 18,
            },
          ]
        } />
    </View>
  </View>
</View>
`;
